# PythonCode

./: README.md
BioBiljetter/: Intäkter.py  biografer.txt  intro.txt
KattisSolutions/: veci.py
PythonRefresher/: py_gameProject1.py  refresher.py
TestProgram/: main.py
pythonDiffTool/: README.md
ramtin-tibber-case/: .coverage  .env  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
ramtin-tibber-case/src/: database_manager.py  get_currencies_and_rates.py  load_csv.py  main.py
ramtin-tibber-case/tests/: README.md  test_database_manager.py  test_get_currencies_and_rates.py  test_load_csv.py
tibber-case/: .coverage  README.md  pyproject.toml
tibber-case/src/: database_manager.py  get_currencies_and_rates.py  load_csv.py
